--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@ A passionate Full stack web developer having an experience of building Web Appli
       <span class="mb-3 mb-md-0 text-white">Reach out to me<br>
          <img src="./geo-alt.svg" class="lo"> Modinagar,Ghaziabad
         <br>
-      Uttarpradesh,India</span>
+      Uttarpradesh,India
+      <br>
+      open for opportunities:Yes</span>
     </div>
 
     <div class="social" id="social">
