--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@ A passionate Full stack web developer having an experience of building Web Appli
         <br>
       Uttarpradesh,India
     <br>
-  open for opportunities:Yes</span>
+  open for opportunities:Yes
+      <br>
+      Mail:asmitkansal176@gmail.com
+      </span>
     </div>
 
     <div class="social" id="social">
